plugins {
    id "java"
    id "maven-publish"
    id "io.freefair.lombok" version "9.0.0"
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id "com.github.ben-manes.versions" version "0.53.0"
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

ext {
    mapstructVersion = '1.6.3'
    embedMongoVersion = '4.21.0'
}

dependencies {
    implementation "org.springframework.boot:spring-boot-properties-migrator"

    implementation "org.springframework.boot:spring-boot-configuration-processor"
    implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation "org.springframework.boot:spring-boot-starter-security"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation "com.microsoft.azure:applicationinsights-runtime-attach:3.7.5"

    implementation "com.google.guava:guava:33.5.0-jre"

    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"

    developmentOnly "org.springframework.boot:spring-boot-devtools"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "io.projectreactor:reactor-test:3.7.12"

    testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:${embedMongoVersion}"
    testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:${embedMongoVersion}"

    testImplementation 'org.springframework.graphql:spring-graphql-test:1.4.3'

}

group = "pl.maciejkopec"
version = "1.0.0-SNAPSHOT"
description = "cms"

tasks.withType(JavaCompile) {
    options.compilerArgs += "-Amapstruct.defaultComponentModel=spring"
    options.compilerArgs += "--enable-preview"
    options.encoding = "UTF-8"

}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
}

bootBuildImage {
    builder = "micneo/cms"
}

jar {
    enabled = false
}

compileJava.inputs.files(processResources)
